Add star button in activity feed

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -73,6 +73,8 @@ layout: default
     {% if site.activity_feed %}
     <h2 class="mt-5 mb-2">Activity on
       <a href="https://github.com/safrazik/vue-file-agent">Github</a>
+      <!-- Place this tag where you want the button to render. -->
+      <a class="github-button" href="https://github.com/safrazik/vue-file-agent" data-icon="octicon-star"aria-label="Star safrazik/vue-file-agent on GitHub">Star</a>
     </h2>
     <div class="text-muted mb-3">Thank you for your interest and contributions</div>
 
@@ -90,3 +92,6 @@ layout: default
     </div>
   </div>
 </div>
+
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
