--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,6 +47,10 @@ layout: default
            <a href="#installation" class="btn btn-outline-secondary btn-sm mb-2">Installation</a>
            <a href="#advanced-demo" class="btn btn-outline-secondary btn-sm mb-2">Advanced Demo</a>
            <a href="{{ "/docs/" | prepend: site.baseurl }}" class="btn btn-outline-secondary btn-sm mb-2">Docs & Examples</a>
+
+        </p>
+        <p style="margin-top: -1rem;">
+          <a class="btn btn-outline-secondary btn-sm github-button" href="https://github.com/safrazik/vue-file-agent" data-size="large" data-show-count="true" aria-label="Star safrazik/vue-file-agent on GitHub">Star</a>
         </p>
            <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
         </div>
@@ -74,7 +78,7 @@ layout: default
     <h2 class="mt-5 mb-2">Activity on
       <a href="https://github.com/safrazik/vue-file-agent">Github</a>
       <!-- Place this tag where you want the button to render. -->
-      <a class="github-button" href="https://github.com/safrazik/vue-file-agent" data-icon="octicon-star"aria-label="Star safrazik/vue-file-agent on GitHub">Star</a>
+      <a class="github-button" href="https://github.com/safrazik/vue-file-agent" data-size="large" data-show-count="true" aria-label="Star safrazik/vue-file-agent on GitHub">Star</a>
     </h2>
     <div class="text-muted mb-3">Thank you for your interest and contributions</div>
 
