--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,27 +56,31 @@
 </head>
 <body class="w-100 h-100" style="padding-top: 3.5rem;">
 
-<nav class="navbar navbar-expand fixed-top navbar-dark bg-dark px-0" style="background: rgba(52, 58, 64, 0.95) !important; height: 3.5rem;">
-  <div class="container" style="padding-left: 15px;
-    padding-right: 15px;">
-    <a class="navbar-brand" href="{{ "/" | prepend: site_base_url }}">Vue File Agent</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+{% if layout.is_home %}
+<div class="w-100 h-100">
+{% endif %}
 
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{{ "/docs/" | prepend: site_base_url }}">Docs</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/safrazik/vue-file-agent">GitHub</a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand fixed-top navbar-dark bg-dark px-0" style="background: rgba(52, 58, 64, 0.95) !important; height: 3.5rem;">
+    <div class="container" style="padding-left: 15px;
+      padding-right: 15px;">
+      <a class="navbar-brand" href="{{ "/" | prepend: site_base_url }}">Vue File Agent</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{{ "/docs/" | prepend: site_base_url }}">Docs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/safrazik/vue-file-agent">GitHub</a>
+          </li>
+        </ul>
+      </div>
+      <!-- <small class="navbar-text">Every file deserves to be treated equally</small> -->
     </div>
-    <!-- <small class="navbar-text">Every file deserves to be treated equally</small> -->
-  </div>
-</nav>
+  </nav>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.js" integrity="sha256-qq7wfY6gQJldAy+TGLT7UF/TqnfV4XFzGF/RzrVXq24=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -86,6 +90,21 @@
   <script src='{{ "/vue-file-agent.umd.js?v=1.2.0" | prepend: site.dist_baseurl }}'></script>
   {% endif %}
   {{ content }}
+
+  <div class="bg-secondary text-white mt-5 py-3">
+    <div class="container">
+      <div class="text-center">
+        Made with love from <a class="text-white" href="https://twitter.com/safrazik" target="_blank"><strong>@safrazik</strong></a>
+        <a href="https://twitter.com/safrazik?ref_src=vfa" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow on Twitter</a>
+      </div>
+    </div>
+  </div>
+
+{% if layout.is_home %}
+</div>
+{% endif %}
+
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </body>
 </html>
