--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,100 +1,94 @@
 ---
 layout: default
+is_home: true
 ---
 
-<div id="app" class="w-100 h-100">
-  <div class="cover-body text-center d-flex w-100 xh-100">
-    <div class="text-center cover-container container w-100 xh-100 p-3 mx-auto d-flex flex-column">
+<div class="cover-body text-center d-flex w-100 xh-100">
+  <div class="text-center cover-container container w-100 xh-100 p-3 mx-auto d-flex flex-column">
 <!--       <header class="masthead clearfix mb-auto">
-        <div class="inner">
-          <div class="masthead-brand">              
-            <div class="text-mutedx" style="color: #ACB5BD">
-              <p>
-                Every file deserves to be treated equally
-              </p>
-            </div>
+      <div class="inner">
+        <div class="masthead-brand">              
+          <div class="text-mutedx" style="color: #ACB5BD">
+            <p>
+              Every file deserves to be treated equally
+            </p>
           </div>
         </div>
-      </header> -->
+      </div>
+    </header> -->
 
-      <main role="main" class="inner cover mb-3">
-        <div class="text-left" style="color: #ACB5BD">
-          <p>
-            Every file deserves to be treated equally
-          </p>
-        </div>
+    <main role="main" class="inner cover mb-3">
+      <div class="text-left" style="color: #ACB5BD">
+        <p>
+          Every file deserves to be treated equally
+        </p>
+      </div>
 <!--             <h1 class="cover-heading">Cover your page.</h1>
-        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p> -->
-        <div id="demo-basic-wrapper">
-          {% capture demo_basic %}
-            {% include_relative src/demo/demo-basic.vue %}
-          {% endcapture %}
-          {% include_relative website/includes/vue-code.md name="demo_basic" code=demo_basic result_only=true %}
-        </div>
-<!--             <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-        </p> -->
-      </main>
-
-      <footer class="mastfoot mt-auto">
-        <div class="inner">
-        <p class="lead-old">
-          <!-- <a href="#" class="btn btn-lg btn-secondary">Get Started</a> -->
-           <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
-
-           <!-- <a href="https://github.com/safrazik/vue-file-agent" class="btn btn-outline-secondary btn-sm">Github</a> -->
-           <a href="#features" class="btn btn-outline-secondary btn-sm mb-2">Features</a>
-           <a href="#installation" class="btn btn-outline-secondary btn-sm mb-2">Installation</a>
-           <a href="#advanced-demo" class="btn btn-outline-secondary btn-sm mb-2">Advanced Demo</a>
-           <a href="{{ "/docs/" | prepend: site.baseurl }}" class="btn btn-outline-secondary btn-sm mb-2">Docs & Examples</a>
-
-        </p>
-        <p style="margin-top: -1rem;">
-          <a class="btn btn-outline-secondary btn-sm github-button" href="https://github.com/safrazik/vue-file-agent" data-size="large" data-show-count="true" aria-label="Star safrazik/vue-file-agent on GitHub">Star</a>
-        </p>
-           <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
-        </div>
-      </footer>
-    </div>
-  </div>
-  <div class="container">
-    <div id="docs" name="docs"></div>
-    <div class="markdown-body" style="margin: 40px 0;">
-      {{ content }}
-    </div>
-  </div>
-  <div class="container">
-    <div id="advanced-demo" name="advanced-demo"></div>
-      <h2>Advanced Demo</h2>
-      <div id="demo-advanced-wrapper">
-        {% capture demo_advanced %}
-          {% include_relative src/demo/demo-advanced.vue %}
+      <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p> -->
+      <div id="demo-basic-wrapper">
+        {% capture demo_basic %}
+          {% include_relative src/demo/demo-basic.vue %}
         {% endcapture %}
-        {% include_relative website/includes/vue-code.md name="demo_advanced" code=demo_advanced result_only=true %}
-      </div> 
+        {% include_relative website/includes/vue-code.md name="demo_basic" code=demo_basic result_only=true %}
+      </div>
+<!--             <p class="lead">
+        <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+      </p> -->
+    </main>
+
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+      <p class="lead-old">
+        <!-- <a href="#" class="btn btn-lg btn-secondary">Get Started</a> -->
+         <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
+
+         <!-- <a href="https://github.com/safrazik/vue-file-agent" class="btn btn-outline-secondary btn-sm">Github</a> -->
+         <a href="#features" class="btn btn-outline-secondary btn-sm mb-2">Features</a>
+         <a href="#installation" class="btn btn-outline-secondary btn-sm mb-2">Installation</a>
+         <a href="#advanced-demo" class="btn btn-outline-secondary btn-sm mb-2">Advanced Demo</a>
+         <a href="{{ "/docs/" | prepend: site.baseurl }}" class="btn btn-outline-secondary btn-sm mb-2">Docs & Examples</a>
+
+      </p>
+      <p style="margin-top: -1rem;">
+        <a class="btn btn-outline-secondary btn-sm github-button" href="https://github.com/safrazik/vue-file-agent" data-size="large" data-show-count="true" aria-label="Star safrazik/vue-file-agent on GitHub">Star</a>
+        <a href="https://twitter.com/safrazik?ref_src=vfa" class="btn btn-outline-secondary btn-sm twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @safrazik</a>
+      </p>
+         <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
+      </div>
+    </footer>
+  </div>
+</div>
+<div class="container">
+  <div id="docs" name="docs"></div>
+  <div class="markdown-body" style="margin: 40px 0;">
+    {{ content }}
+  </div>
+</div>
+<div class="container">
+  <div id="advanced-demo" name="advanced-demo"></div>
+    <h2>Advanced Demo</h2>
+    <div id="demo-advanced-wrapper">
+      {% capture demo_advanced %}
+        {% include_relative src/demo/demo-advanced.vue %}
+      {% endcapture %}
+      {% include_relative website/includes/vue-code.md name="demo_advanced" code=demo_advanced result_only=true %}
+    </div> 
 
 
-    {% if site.activity_feed %}
-    <h2 class="mt-5 mb-2">Activity on
-      <a href="https://github.com/safrazik/vue-file-agent">Github</a>
-      <!-- Place this tag where you want the button to render. -->
-      <a class="github-button" href="https://github.com/safrazik/vue-file-agent" data-size="large" data-show-count="true" aria-label="Star safrazik/vue-file-agent on GitHub">Star</a>
-    </h2>
-    <div class="text-muted mb-3">Thank you for your interest and contributions</div>
+  {% if site.activity_feed %}
+  <h2 class="mt-5 mb-2">Activity on
+    <a href="https://github.com/safrazik/vue-file-agent">Github</a>
+    <!-- Place this tag where you want the button to render. -->
+    <a class="github-button" href="https://github.com/safrazik/vue-file-agent" data-size="large" data-show-count="true" aria-label="Star safrazik/vue-file-agent on GitHub">Star</a>
+        <a href="https://twitter.com/safrazik?ref_src=vfa" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @safrazik</a>
+  </h2>
+  <div class="text-muted mb-3">Thank you for your interest and contributions</div>
 
-    {% include_relative website/includes/activity-feed.html %}
-    {% endif %}
+  {% include_relative website/includes/activity-feed.html %}
+  {% endif %}
 
 <!--         <div class="mb-5">
-    </div> -->
-  </div> 
-  <div class="bg-secondary text-white mt-5 py-3">
-    <div class="container">
-      <div class="text-center">
-        Made with love from <a class="text-white" href="https://twitter.com/safrazik" target="_blank">@safrazik</a>
-      </div>
-    </div>
-  </div>
+  </div> -->
 </div>
 
 <!-- Place this tag in your head or just before your close body tag. -->
