--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,9 +93,13 @@
 
   <div class="bg-secondary text-white mt-5 py-3">
     <div class="container">
+      <div class="text-center mb-2">
+        Made with love from
+        <a class="text-white" href="https://twitter.com/safrazik" target="_blank"><strong>Safraz Razik</strong></a>
+        <br>
+      </div>
       <div class="text-center">
-        Made with love from <a class="text-white" href="https://twitter.com/safrazik" target="_blank"><strong>@safrazik</strong></a>
-        <a href="https://twitter.com/safrazik?ref_src=vfa" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow on Twitter</a>
+        <a href="https://twitter.com/safrazik?ref_src=vfa" class="twitter-follow-button" data-show-count="false" data-size="large">Follow on Twitter</a>
       </div>
     </div>
   </div>
