Update docs website, add logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,10 @@
   <nav class="navbar navbar-expand fixed-top navbar-dark bg-dark px-0" style="background: rgba(52, 58, 64, 0.95) !important; height: 3.5rem;">
     <div class="container" style="padding-left: 15px;
       padding-right: 15px;">
-      <a class="navbar-brand" href="{{ "/" | prepend: site_base_url }}">Vue File Agent</a>
+      <a class="navbar-brand" href="{{ "/" | prepend: site_base_url }}">
+        <img style="width: 40px; height: 40px; border-radius: 50%;" src="{{ "/website/assets/logo.png" | prepend: site_base_url }}">
+        Vue File Agent
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
