SCSS: broken into pieces!

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,18 +1,11 @@
-.vue-file-agent, .vue-file-agent * {
+.vue-file-agent {
+
   box-sizing: border-box;
-}
 
-.vue-file-agent.file-input-wrapper {
-  position: relative;
-  border: 2px dashed #AAA;
-  text-align: center;
-  transition: all 600ms;
-}
+  * {
+    box-sizing: border-box;
+  }
 
-.vue-file-agent.file-input-wrapper.is-drag-over,
-.is-drag-over .vue-file-agent.file-input-wrapper {
-  border-color: #f61a1a;
-  box-shadow: inset 0px 0px 20px 1px #f61a1a;
 }
 
 .is-drag-over * {
@@ -23,458 +16,10 @@
   content: " ";
 }
 
-.vue-file-agent .file-preview-wrapper {
-  display: inline-block;
-  margin: 5px;
-  position: relative;
-  vertical-align: top;
-  margin: 16px;
-  margin: 8px;
+.is-disabled .vue-file-agent {
+  opacity: 0.65;
+  pointer-events: none;
 }
-
-.vue-file-agent .file-preview-wrapper::before {
-  content: " ";
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.25);
-}
-
-.vue-file-agent .file-preview .file-preview-img {
-  max-width: 100%;
-  max-height: 100%;
-  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="16" height="16" viewBox="0 0 16 16"><rect x="0" y="0" width="100%" height="100%" fill="rgba(255, 255, 255, 0.1)" /><rect x="50%" y="0" width="50%" height="50%" fill="rgba(0, 0, 0, 0.075)" /><rect x="0" y="50%" width="50%" height="50%" fill="rgba(0, 0, 0, 0.075)" /></svg>');
-  background-repeat: repeat;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.vue-file-agent .file-preview .file-preview-img-clone {
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
-  object-fit: cover;
-  filter: blur(10px);
-  height: 100%;
-  width: 100%;
-}
-
-.vue-file-agent .file-preview-wrapper-image .image-preview .file-preview-overlay,
-.vue-file-agent .file-category-video-playable .file-preview .file-preview-overlay {
-  content: " ";
-  background: rgba(0, 0, 0, 0.25);
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
-  z-index: -1;
-}
-.vue-file-agent .file-preview-wrapper-image .image-preview.dark-content .file-preview-overlay {
-  background: rgba(255, 255, 255, 0.25);
-}
-.vue-file-agent .file-category-video-playable .file-preview .file-preview-overlay {
-  z-index: 1;
-}
-
-.vue-file-agent .file-preview {
-  position: relative;
-  z-index: 1;
-  float: left;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 9;
-}
-
-.vue-file-agent.has-multiple .file-preview,
-.vue-file-agent.is-single .file-preview-wrapper.is-deletable .file-preview {
-  z-index: 11;
-}
-
-.vue-file-agent .file-preview-new .file-preview {
-  z-index: 8;
-}
-
-.vue-file-agent .file-preview .file-name {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 0 5px;
-  z-index: 4;
-  text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  line-height: 28px;
-  height: 28px;
-  font-size: 16px;
-}
-
-.vue-file-agent .is-deletable .file-preview .file-name {
-  padding-right: 20px;
-}
-
-.vue-file-agent .file-preview .file-name {
-}
-
-.vue-file-agent .file-preview .file-delete {
-  cursor: pointer;
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 0;
-  font-size: 16px;
-  background: transparent;
-  height: 28px;
-  width: 22px;
-  display: block;
-  color: #FFF;
-  color: rgba(255, 255, 255, 0.75);
-  z-index: 5;
-}
-
-.vue-file-agent .file-preview .file-delete svg {
-  width: 1em;
-  height: 1em;
-  fill: currentColor;
-  vertical-align: middle;
-}
-
-.vue-file-agent .file-preview .file-icon {
-  z-index: 455;
-  position: absolute;
-  top: 50%;
-  height: 72px;
-  width: 72px;
-  margin-top: -36px;
-  left: 50%;
-  margin-left: -36px;
-}
-
-.vue-file-agent .file-preview .file-icon svg {
-  width: 72px;
-  height: 72px;
-  fill: #FFF;
-}
-
-.vue-file-agent .image-preview .file-icon {
-  display: none;
-}
-
-.vue-file-agent .file-preview::before,
-.vue-file-agent .file-preview::after {
-  content: " ";
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
-  top: auto;
-  height: 25px;
-}
-
-.vue-file-agent .file-preview::before {
-  height: 28px;
-  top: 0;
-  bottom: auto;
-}
-
-.vue-file-agent .file-preview .file-ext {
-  position: absolute;
-  font-size: 16px;
-  text-transform: uppercase;
-  text-align: left;
-  display: block;
-  /*width: 100%;*/
-  right: 0;
-  left: 0;
-  bottom: 0;
-  line-height: 25px;
-  padding: 0 5px;
-  z-index: 3;
-}
-
-.vue-file-agent .file-preview .file-size {
-  position: absolute;
-  font-size: 16px;
-  text-transform: uppercase;
-  text-align: right;
-  display: block;
-  /*width: 100%;*/
-  right: 0;
-  bottom: 0;
-  line-height: 25px;
-  padding: 0 5px;
-  z-index: 4;
-}
-
-.vue-file-agent .file-preview .image-dimension .image-dimension-width,
-.vue-file-agent .file-preview .image-dimension .image-dimension-height {
-  display: inline-block;
-}
-
-.vue-file-agent .file-preview .image-dimension .image-dimension-width::after {
-  content: "x";
-}
-
-.vue-file-agent .file-preview .image-dimension {
-  position: absolute;
-  font-size: 12px;
-  text-align: center;
-  display: block;
-  width: 100%;
-  right: 0;
-  bottom: 0;
-  line-height: 25px;
-  padding: 0 5px;
-  z-index: 4;
-}
-
-.vue-file-agent .file-input {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  z-index: 10;
-  cursor: pointer;
-}
-
-.vue-file-agent .file-preview-new {
-  text-align: center;
-  padding: 8px;
-  z-index: 1;
-}
-
-.vue-file-agent .file-preview-new::before {
-  background: rgba(0, 0, 0, 0.05);
-}
-.vue-file-agent .file-preview-new .file-preview::before,
-.vue-file-agent .file-preview-new .file-preview::after {
-  display: none;
-}
-
-.vue-file-agent .file-preview-new svg {
-  fill: #AAA;
-  margin-top: 16%;
-  height: 36%;
-}
-
-.vue-file-agent .file-preview-new .help-text {
-  color: #AAA;
-  text-align: center;
-  font-size: 16px;
-  line-height: 20px;
-  height: 20px;
-  display: block;
-}
-
-.vue-file-agent .file-preview-new-full  {
-  width: 100% !important;
-}
-
-.vue-file-agent .file-preview-new-full .file-preview {
-  padding: 0 !important;
-  height: 100px !important;
-}
-
-.vue-file-agent .file-preview-new-full svg {
-  margin-top: 10px !important;
-  height: 50px !important;
-}
-
-.vue-file-agent .file-preview-new-full::before {
-  background: transparent !important;
-}
-
-.vue-file-agent .file-progress {
-  display: block;
-  height: 3px;
-  z-index: 3;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  overflow: hidden;
-  top: 32px;
-  top: 1px;
-  top: 0;
-  height: 28px;
-}
-
-// .vue-file-agent.no-meta .file-progress {
-.vue-file-agent .file-progress {
-    height: 4px;
-    margin-top: 1px;
-    margin-left: 1px;
-    margin-right: 1px;
-}
-
-.vue-file-agent .file-progress.has-file-progress {
-  background: rgba(255, 255, 255, 0.5);
-  box-shadow: 0px 2px 10px -1px rgba(0, 0, 0, 0.75);
-}
-
-.vue-file-agent .is-deletable .file-progress {
-}
-
-.vue-file-agent .file-progress-bar {
-  background: #fac525;
-  display: block;
-  height: 100%;
-  transition: all 100ms;
-  width: 0;
-}
-
-.vue-file-agent .file-progress.file-progress-full {
-    width: 5px !important;
-    height: 5px !important;
-    right: 0 !important;
-    left: auto !important;
-    border-radius: 50%;
-    box-shadow: -1px 1px 2px 0px rgba(0, 0, 0, 0.75);
-}
-
-.vue-file-agent .file-progress-full .file-progress-bar {
-  // background: #6eef1a;
-  background: #54d500;
-}
-
-.overall-progress {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 10;
-  height: 10px;
-}
-
-.overall-progress .overall-progress-bar {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(255, 229, 0, 0.25);
-}
-
-.overall-progress .overall-progress-left {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.overall-progress.overall-progress-full .overall-progress-bar {
-  background: rgba(63, 255, 0, 0.25);
-}
-
-.overall-progress {
-  display: none;
-}
-
-
-.vue-file-agent .file-error-wrapper {
-  position: absolute;
-  left: 0;
-  right: 0;
-  color: #FFF;
-  bottom: 25px;
-  z-index: 900;
-  padding: 10px;
-  // background: #ea2626;
-  // background: rgba(234, 38, 38, 0.85);
-  top: 28px;
-  font-size: 14px;
-  display: flex;
-  align-items: center;
-}
-
-.vue-file-agent .file-error-wrapper .file-error-message {
-  background: #ea2626;
-  width: 100%;
-  height: auto;
-  color: #FFF;
-  padding: 0 5px;
-}
-
-.vue-file-agent .file-av-wrapper .file-av-action {
-  width: 60px;
-  height: 60px;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  margin-top: -30px;
-  margin-left: -30px;
-  background: transparent;
-  border-radius: 50%;
-  z-index: 800;
-  cursor: pointer;
-}
-
-
-.vue-file-agent .file-category-audio-playable .file-icon,
-.vue-file-agent .file-category-video-playable .file-icon {
-  display: none;
-}
-
-.vue-file-agent .file-av-wrapper .file-av-stop,
-.vue-file-agent .file-av-wrapper .file-av-play {
-  width: 50%;
-  height: 50%;
-  position: absolute;
-  left: 25%;
-  top: 25%;
-  display: none;
-}
-.vue-file-agent .file-av-wrapper .file-av-play {
-  height: 90%;
-  width: 90%;
-  left: 5%;
-  top: 5%;
-  display: block;
-}
-
-.vue-file-agent .file-is-playing-av .file-av-wrapper .file-av-stop {
-  display: block;
-}
-.vue-file-agent .file-is-playing-av .file-av-wrapper .file-av-play {
-  display: none;
-}
-
-.vue-file-agent .file-av-wrapper .file-av-stop svg,
-.vue-file-agent .file-av-wrapper .file-av-play svg {
-  fill: #FFF;
-  width: 100%;
-  height: 100%;
-}
-
-.vue-file-agent .file-av-wrapper video, .vue-file-agent .file-av-wrapper audio {
-  position: absolute;
-  left: 0;
-  right: 0;
-  z-index: 799;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.75);
-}
-
-.vue-file-agent.no-meta .file-preview .file-ext,
-.vue-file-agent.no-meta .file-preview .file-name,
-.vue-file-agent.no-meta .file-preview .file-size,
-.vue-file-agent.no-meta .file-preview .image-dimension,
-.vue-file-agent.no-meta .file-preview::after
-{
-  display: none;
-}
-
 
 .grid-box-item {
   transition: all 600ms;
@@ -488,48 +33,4 @@
 
 .grid-box-leave-active {
   position: absolute !important;
-}
-
-
-
-/* ----------- */
-
-.vue-file-agent .file-preview-wrapper-image .file-preview::before,
-.vue-file-agent .file-category-video-playable .file-preview::before {
-  // background: rgba(100, 100, 100, 0.5);
-  box-shadow: inset 0px 40px 20px -25px rgba(0, 0, 0, 0.5);
-  height: 40px;
-}
-
-.vue-file-agent .file-preview-wrapper-image .file-preview::after,
-.vue-file-agent .file-category-video-playable .file-preview::after {  
-  // background: rgba(100, 100, 100, 0.5);
-  box-shadow: inset 0px -40px 20px -25px rgba(0, 0, 0, 0.5);
-  height: 40px;
-}
-
-
-.vue-file-agent .file-preview .file-name,
-.vue-file-agent .file-preview .file-ext,
-.vue-file-agent .file-preview .file-size,
-.vue-file-agent .file-preview .image-dimension,
-.vue-file-agent .file-preview .image-dimension .image-dimension-width::after {
-  color: #FFF;
-}
-
-
-.transparent-image-wrapper {
-  background: rgba(0, 0, 0, 0.25);
-}
-
-.transparent-image-bg {
-  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="16" height="16" viewBox="0 0 16 16"><rect x="0" y="0" width="100%" height="100%" fill="rgba(255, 255, 255, 0.1)" /><rect x="50%" y="0" width="50%" height="50%" fill="rgba(0, 0, 0, 0.075)" /><rect x="0" y="50%" width="50%" height="50%" fill="rgba(0, 0, 0, 0.075)" /></svg>');
-  background-repeat: repeat;
-  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="16" height="16" viewBox="0 0 16 16"><rect x="0" y="0" width="100%" height="100%" fill="rgba(255, 255, 255, 0.1)" /><rect x="50%" y="0" width="50%" height="50%" fill="rgba(0, 0, 0, 0.075)" /><rect x="0" y="50%" width="50%" height="50%" fill="rgba(0, 0, 0, 0.075)" /></svg>');
-  background-repeat: repeat;
-}
-
-.is-disabled .vue-file-agent {
-  opacity: 0.65;
-  pointer-events: none;
 }
