--- a/src/scss/vue-file-agent.scss
+++ b/src/scss/vue-file-agent.scss
@@ -1,4 +1,12 @@
 @import "./main";
-@import "./grid-block";
+@import "./file-preview-wrapper";
+@import "./file-preview";
+@import "./file-preview-new";
+@import "./file-av";
+@import "./file-progress";
+@import "./file-input";
+@import "./file-drag";
+@import "./file-error";
 @import "./file-name-edit";
+@import "./grid-block";
 @import "./theme-list";
