--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,10 @@ layout: default
 is_home: true
 ---
 
+<script type="text/javascript">
+  {% include_relative src/demo/demo-base.js %}
+</script>
+
 <div class="cover-body text-center d-flex w-100 xh-100">
   <div class="text-center cover-container container w-100 xh-100 p-3 mx-auto d-flex flex-column">
 <!--       <header class="masthead clearfix mb-auto">
