--- a/_layouts/example.html
+++ b/_layouts/example.html
@@ -2,7 +2,9 @@
 layout: default
 external_urls: true
 ---
-
+<script type="text/javascript">
+  {% include_relative src/demo/demo-base.js %}
+</script>
 <div id="app">
   <div class="container">
     <div id="docs" name="docs"></div>
