Fix #30 Intuitive drag/drop sorting

--- a/src/scss/_theme-list.scss
+++ b/src/scss/_theme-list.scss
@@ -116,6 +116,12 @@
       right: 17px;
     }
 
+    .file-sortable-handle {
+      margin: 0;
+      left: 10px;
+      top: 10px;
+    }
+
   }
 
   .file-preview-new {
