--- a/src/scss/vue-file-agent.scss
+++ b/src/scss/vue-file-agent.scss
@@ -8,5 +8,6 @@
 @import "./file-drag";
 @import "./file-error";
 @import "./file-name-edit";
+@import "./file-sortable";
 @import "./grid-block";
 @import "./theme-list";
