Add tus library

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,6 +87,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.js" integrity="sha256-qq7wfY6gQJldAy+TGLT7UF/TqnfV4XFzGF/RzrVXq24=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tus-js-client@1.8.0/dist/tus.js"></script>
   {% if layout.external_urls %}
   <script src="https://cdn.jsdelivr.net/npm/vue-file-agent@1.5.0-beta.1/dist/vue-file-agent.umd.js"></script>
   {% else %}
