--- a/src/scss/_file-drag.scss
+++ b/src/scss/_file-drag.scss
@@ -1,7 +1,7 @@
 .vue-file-agent {
   &.file-input-wrapper {
     position: relative;
-    border: 2px dashed #AAA;
+    border: 2px dashed #aaa;
     text-align: center;
     transition: all 600ms;
   }
