--- a/src/scss/_grid-block.scss
+++ b/src/scss/_grid-block.scss
@@ -10,8 +10,8 @@
 .grid-block-wrapper .grid-block .file-preview {
   width: 100%;
   height: 0;
-  padding-bottom: 75%; /* 4:3 aspect ratio */;
-  padding-bottom: 100%; /* square */;
+  padding-bottom: 75%; /* 4:3 aspect ratio */
+  padding-bottom: 100%; /* square */
 }
 
 @media (min-width: 576px) {
