--- a/src/scss/_file-preview-wrapper.scss
+++ b/src/scss/_file-preview-wrapper.scss
@@ -1,5 +1,4 @@
 .vue-file-agent {
-
   .file-preview-wrapper {
     display: inline-block;
     margin: 5px;
@@ -9,7 +8,7 @@
     margin: 8px;
 
     &::before {
-      content: " ";
+      content: ' ';
       position: absolute;
       left: 0;
       top: 0;
@@ -20,13 +19,16 @@
   }
 
   // image preview, video thumbnail
-  .file-preview-wrapper-image, .file-category-video-playable {
-
+  .file-preview-wrapper-image,
+  .file-category-video-playable {
     .file-preview .file-preview-overlay {
-      content: " ";
+      content: ' ';
       background: rgba(0, 0, 0, 0.25);
       position: absolute;
-      top: 0; right: 0; bottom: 0; left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
       z-index: -1;
     }
 
@@ -36,7 +38,7 @@
       height: 40px;
     }
 
-    .file-preview::after {  
+    .file-preview::after {
       // background: rgba(100, 100, 100, 0.5);
       box-shadow: inset 0px -40px 20px -25px rgba(0, 0, 0, 0.5);
       height: 40px;
@@ -45,10 +47,10 @@
     .file-preview .file-icon {
       display: none;
     }
-
   }
 
-  .file-category-audio-playable, .file-category-video-playable {
+  .file-category-audio-playable,
+  .file-category-video-playable {
     .file-preview .file-icon {
       display: none;
     }
@@ -65,5 +67,4 @@
       background: rgba(255, 255, 255, 0.25);
     }
   }
-
 }
