--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,11 +1,9 @@
 .vue-file-agent {
-
   box-sizing: border-box;
 
   * {
     box-sizing: border-box;
   }
-
 }
 
 .is-drag-over * {
@@ -13,7 +11,7 @@
 }
 
 .is-drag-over::before {
-  content: " ";
+  content: ' ';
 }
 
 .is-disabled .vue-file-agent {
@@ -25,7 +23,8 @@
   transition-duration: 600ms;
 }
 
-.grid-box-enter, .grid-box-leave-to  {
+.grid-box-enter,
+.grid-box-leave-to {
   opacity: 0 !important;
   /*transform: translate3d(-20px, -20px, -20px) scale(0) !important;*/
   transform: translate3d(0, 0, 0) scale(0.25) !important;
