Fix #39 File link for images in list theme

--- a/src/scss/_theme-list.scss
+++ b/src/scss/_theme-list.scss
@@ -32,6 +32,10 @@
         width: 53px;
       }
 
+      .thumbnail {
+        z-index: 12;
+      }
+
       .file-icon svg {
         height: 46px;
         width: 46px;
