--- a/src/scss/_grid-block.scss
+++ b/src/scss/_grid-block.scss
@@ -14,6 +14,11 @@
   padding-bottom: 100%; /* square */
 }
 
+.is-readonly .grid-block-wrapper {
+  padding: 0;
+  margin: -1px; // border width of .grid-block-wrapper .grid-block
+}
+
 @media (min-width: 576px) {
   .grid-block-wrapper .grid-block {
     width: 33.3333%;
@@ -23,6 +28,10 @@
   .grid-block-wrapper {
     /*padding: 8px;*/
     padding: 2px;
+  }
+  .is-readonly .grid-block-wrapper {
+    padding: 0;
+    margin: -2px; // border width of .grid-block-wrapper .grid-block
   }
 }
 
